# cisternal

./: .gitignore  LICENSE  README.md  main.py  praxia.toml  pyproject.toml
.github/workflows/: export-dogfood.yml  publish.yml
.praxia/: audits.jsonl  daily.jsonl  identity.json  loop_backlog_scan.json  loop_priorities.toml  loop_state.toml  loop_triage_cache.json  manifest.toml  plans.jsonl  praxia.just  recon.jsonl  sprint_rubric.toml  vsm_state.json  workspace.id
.praxia/agents/: validate-helper.md
.praxia/cache/: analyzer.db
.praxia/commands/: export.md  validate.md
.praxia/docs/designs/: 260623_m12-epic-audit_design.md  260623_m31-epic-audit_design.md  260623_m32-entry-points_design.md  260623_m32-epic-audit_design.md  260623_m4-epic-audit_design.md  260623_m4-export-trust_design.md  260623_m5-telemetry-adoption_design.md  260624_m10-1-telemetry-doctor-cli_design.md  260624_m10-2-telemetry-doctor-json-exit-codes_design.md  (+6 more)
.praxia/dynamic_workflows/: 260616_cisterna-m1-foundation.js  260616_cisterna-m1-sprint2.js  260616_cisterna-m1-sprint3.js
.praxia/handoffs/: cisterna_M2 complete_20260618_181537_9e0f7366-caa1-4bf3-9c89-bc5ed6c895c5.yaml  cisterna_M2 spec → backlog_20260618_163240_d9693b73-fad0-438f-a38c-66e6739d65a7.yaml  cisterna_M3 — agent-asset export (epic complete)_20260619_120917_cebc0a88-d392-436f-8884-7f49ab6f68b8.yaml
.praxia/hooks/: pre-export.sh
.praxia/research/: synthesis.jsonl
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_cisternal/: pyproject.toml
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_cisternal/src/toy_cisternal/: __init__.py  registry.py  wire.py
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_cisternal/tests/: test_registry.py  test_wire.py
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_consumer/: pyproject.toml
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_consumer/scripts/: simulate_dashboard_call.py
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_consumer/src/toy_consumer/: app.py
.praxia/skills/developing-cisternal-tools-workspace/sandbox-template/toy_consumer/tests/: test_app.py
.praxia/sprint_plans/: 260616_cisterna-m1-foundation.toml  260616_cisterna-m1-sprint2.toml  260616_cisterna-m1-sprint3.toml  260623_2327-redundant-sort.toml  260623_2712-docs-hygiene.toml  260623_2713-native-validate.toml  260623_m12-3-emitter-ports.toml  260623_m12-4-blocking-promotion.toml  260623_m12-5-rust-parity-slugs.toml  260623_m12-epic-audit.toml  260623_m31-epic-audit.toml  260623_m31a-manifest-validate.toml  260623_m31b-cursor-copilot.toml  260623_m31c-antigravity.toml  260623_m32-entry-points.toml  260623_m32-epic-audit.toml  260623_m33a-snapshot-api.toml  260623_m33bc-parallel.toml  260623_m4-epic-audit.toml  260623_m4-export-trust.toml  260623_m5-telemetry-adoption.toml  260624_m12-1-rust-bridge.toml  260624_m33-epic-audit.toml  260624_m5-epic-audit.toml
.praxia/workflows/: export-dogfood.toml
examples/minimal_emitter/: README.md  pyproject.toml
examples/minimal_emitter/src/minimal_emitter/: __init__.py  emitter.py
examples/minimal_emitter/tests/: test_emitter.py
src/cisterna/: __init__.py  cli.py
src/cisternal/: __init__.py  cli.py
tests/: conftest.py  test_antigravity_rust_parity.py  test_assets_bundle_m31.py  test_assets_capability.py  test_assets_composite.py  test_assets_manifest.py  test_assets_manifest_extensions.py  test_assets_manifest_vendor_commands.py  test_assets_public_api.py  test_assets_spec.py  test_bathos_telemetry_cutover.py  test_claude_rust_parity.py  test_cli.py  test_cli_assets.py  test_cli_assets_export_surface.py  test_cli_assets_inspect.py  test_cli_assets_validate.py  test_cli_assets_validate_conflict.py  test_cli_native_validate.py  test_cli_rust_parity.py  test_cli_telemetry_doctor.py  test_contemplex_telemetry_cutover.py  test_copilot_rust_parity.py  test_core.py  test_cursor_rust_parity.py  test_dogfood_praxia_fixture.py  test_export_antigravity.py  test_export_claude.py  test_export_claude_bodies.py  test_export_copilot.py  test_export_cursor.py  test_export_hooks_surface.py  test_export_registry.py  test_export_regression_m31b.py  test_export_regression_m31c.py  test_export_regression_m32.py  test_export_sink.py  test_export_write.py  test_golden_matrix.py  test_job_span.py  (+25 more)
tests/conformance/: README.md  manifest_minimal.bundle.json
tests/fixtures/: otel-collector-config.yaml
tests/shadow/: harness.py  test_bathos_shadow.py  test_contemplex_shadow.py  test_myxcel_shadow.py  test_xperiri_shadow.py
(+282 files in other folders)
