[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cisterna"
version = "0.1.0a1"
description = "Shared telemetry substrate and agent-asset export toolkit for the Praxia tool family"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Marielle Russo" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.18.0",
    "fastmcp>=3.4.2",
    "opentelemetry-api>=1.42.1",
]

[project.optional-dependencies]
otlp = [
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
]

[project.scripts]
cisterna = "cisterna.cli:app"

[project.entry-points."cisterna.emitters"]
claude = "cisterna.export.registry:claude_factory"
cursor = "cisterna.export.registry:cursor_factory"
copilot = "cisterna.export.registry:copilot_factory"
antigravity = "cisterna.export.registry:antigravity_factory"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cisterna.assets" = ["data/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires external services (e.g. otel-collector on localhost)",
    "golden_matrix: export trust digest matrix (M11)",
]
