[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toy-cisternal"
version = "0.1.0"
description = "Toy rehearsal stand-in for cisternal's registration surface"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/toy_cisternal"]

[dependency-groups]
dev = ["pytest>=8"]
